# portfolio

./: .gitignore  README.md  anotacoes-estudo.md  app.py  log-estudos.md  pyproject.toml  sessao-planejamento.md
static/: style.css
templates/: index.html
