[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "vitortakeshi",email = "vitortakeshi2003@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
